# webmaster-domain-tools

./: .gitignore  .pre-commit-config.yaml  ANALYZER_REFERENCE.md  APPROACH_COMPARISON.md  ARCHITECTURE_REVIEW.md  CHANGELOG.md  CLAUDE.md  CONFIGURATION_ANALYSIS.md  CONTRIBUTING.md  DESIGN_MODULAR.md  EXECUTIVE_SUMMARY.md  FLET_APP_ANALYSIS.md  IMPLEMENTATION_GUIDE.md  LICENSE  MODE_TOGGLE_IMPLEMENTATION.md  MULTI_PROFILE_ANALYSIS.md  NESTED_CONFIG_IMPLEMENTATION.md  README.md  SECURITY_FIXES_SUMMARY.md  TODO.md  TOGGLE_UI_DEMO.txt  UX_IMPROVEMENTS_DEMO.md  coverage.json  pyproject.toml  wrangler.toml
.claude/: README.md  SessionStart
.claude/hooks/: SessionStart  SessionStart.md  session-start.sh
.claude/skills/creating-skills-skill/: SKILL.md
.claude/skills/self-improving-skill/: SKILL.md
.claude/skills/skillsmp-search/: SKILL.md
.github/workflows/: deploy-cloudflare.yml
docs/: domain-config-validator-design.md
env_test/: .gitignore  README.md  check_environment.py  compare_environments.py  environment.json
env_test/claude/: environment.json
env_test/michael/: environment.json
scripts/: check_imports.py
src/webmaster_domain_tool/: __init__.py  cli.py  config.py  config_editor_dialog.py  config_editor_view.py  config_profiles.py  constants.py  default_config.toml  flet_app.py  flet_config_manager.py  gui_config_adapter.py
src/webmaster_domain_tool/analyzers/: __init__.py  advanced_email_security.py  base.py  cdn_detector.py  dns_analyzer.py  dns_utils.py  domain_config_validator.py  email_security.py  favicon_analyzer.py  google_analyzer.py  html_validator_analyzer.py  http_analyzer.py  http_utils.py  protocol.py  rbl_checker.py  security_headers.py  seo_files_analyzer.py  site_verification_analyzer.py  social_media_analyzer.py  ssl_analyzer.py  whois_analyzer.py
src/webmaster_domain_tool/core/: __init__.py  analyzer.py  config_manager.py  registry.py
src/webmaster_domain_tool/renderers/: __init__.py  base.py  bulk_jsonlines_renderer.py  cli_renderer.py  json_renderer.py
src/webmaster_domain_tool/utils/: __init__.py  debug_stats.py  logger.py  output.py
tests/: __init__.py  test_analyzer_instantiation.py  test_cli.py  test_cli_basic.py  test_cli_error_handling.py  test_cli_renderer_semantic_styles.py  test_config.py  test_config_editor_import.py  test_config_manager_precedence.py  test_config_profiles.py  test_dns_analyzer.py  test_dns_analyzer_output.py  test_domain_validator.py  test_flet_app.py  test_flet_app_cli.py  test_flet_config_manager.py  test_http_config_validation.py  test_integration_workflow.py  test_progress_callback.py  test_registry_circular_dependency.py  test_seo_files_analyzer.py  test_seo_gui_display.py  test_site_verification_display.py  test_skip_parameters.py  test_social_media_analyzer.py
webapp/: .env.example  .env.production  .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.json
webapp/public/: ICONS_TODO.md  _headers  _redirects  manifest.json  robots.txt  sitemap.xml
webapp/src/: App.test.tsx  App.tsx  main.tsx  vite-env.d.ts
webapp/src/components/: AnalysisProgress.tsx  DarkModeToggle.test.tsx  DarkModeToggle.tsx  DomainInput.test.tsx  DomainInput.tsx  ErrorBoundary.test.tsx  ErrorBoundary.tsx  GoogleAd.test.tsx  GoogleAd.tsx  LoadingSpinner.test.tsx  LoadingSpinner.tsx  ResultSection.test.tsx  ResultSection.tsx
webapp/src/services/: dnsService.test.ts  dnsService.ts  exportService.test.ts  exportService.ts  seoService.test.ts  seoService.ts
webapp/src/styles/: index.css
webapp/src/types/: dns.ts  seo.ts
