[project]
name = "webmaster-domain-tool"
version = "0.1.0"
description = "Comprehensive domain analysis tool for webmasters"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Webmaster Tools", email = "tools@example.com" }
]
license = { text = "MIT" }
keywords = ["dns", "ssl", "security", "webmaster", "domain", "analysis"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: Name Service (DNS)",
    "Topic :: System :: Networking",
    "Topic :: Security",
]

dependencies = [
    "dnspython>=2.6.1",
    "httpx>=0.27.0",
    "cryptography>=42.0.0",
    "rich>=13.7.0",
    "typer>=0.12.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.2.0",
    "tomli>=2.0.0; python_version < '3.11'",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.23.0",
    "black>=24.0.0",
    "ruff>=0.3.0",
    "mypy>=1.9.0",
    "pre-commit>=3.5.0",
]

[project.urls]
Homepage = "https://github.com/orgoj/webmaster-domain-tool"
Repository = "https://github.com/orgoj/webmaster-domain-tool"
Issues = "https://github.com/orgoj/webmaster-domain-tool/issues"

[project.scripts]
webmaster-domain-tool = "webmaster_domain_tool.cli:app"
wdt = "webmaster_domain_tool.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/webmaster_domain_tool"]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.ruff]
line-length = 100
target-version = "py310"
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "--verbose --cov=webmaster_domain_tool --cov-report=term-missing"
